correct styling to allow for spacing above contact form

--- a/src/assets/Form.css
+++ b/src/assets/Form.css
@@ -1,9 +1,10 @@
 .container_contactMe {
+    bottom: 2em;
     width: 30vw;
     background-color: rgb(90, 90, 90);
     padding: 2em;
     color: white;
-    border-radius: 2em;
+    border-radius: 1.5em;
     box-shadow: 5px 5px 5px 3px black;
     margin-left: auto;
     margin-right: auto;
@@ -11,41 +12,41 @@
 }
 
 .contact_title {
-        top: 500vh;
-        color: #ecf0f1;
-        font-family: 'Montserrat',
-            sans-serif;
-        font-weight: 800;
-        position: absolute;
-        text-transform: uppercase;
-        width: 30vw;
-        font-size: calc(2.5vw + 0.25em);
-        height: 8vh;
-        line-height: 8vh;
-        text-align: center;
-        text-shadow: 2px -1px 0 #f8f8f8,
-            2px -2px 0 #b3b3b3,
-            3px -3px 0 #686868,
-            4px -4px 0 #555555,
-            5px -5px 0 #505050,
-            6px -6px 0 #3b3b3b,
-            7px -7px 0 #2b2b2b,
-            8px -8px 0 #242424,
-            9px -9px 0 #131313;
-        -moz-transform-origin: bottom left;
-        -webkit-transform-origin: bottom left;
-        -ms-transform-origin: bottom left;
-        transform-origin: bottom left;
-        -moz-transform: skewY(1deg);
-        -webkit-transform: skewY(1deg);
-        -ms-transform: skewY(1deg);
-        -o-transform: skewY(1deg);
-        transform: skewY(1deg);
-        background: transparent;
-    }
+    top: 451vh;
+    color: #ecf0f1;
+    font-family: 'Montserrat',
+        sans-serif;
+    font-weight: 800;
+    position: absolute;
+    text-transform: uppercase;
+    width: 30vw;
+    font-size: calc(2.25vw + 0.25em);
+    height: 8vh;
+    line-height: 8vh;
+    text-align: center;
+    text-shadow: 2px -1px 0 #f8f8f8,
+        2px -2px 0 #b3b3b3,
+        3px -3px 0 #686868,
+        4px -4px 0 #555555,
+        5px -5px 0 #505050,
+        6px -6px 0 #3b3b3b,
+        7px -7px 0 #2b2b2b,
+        8px -8px 0 #242424,
+        9px -9px 0 #131313;
+    -moz-transform-origin: bottom left;
+    -webkit-transform-origin: bottom left;
+    -ms-transform-origin: bottom left;
+    transform-origin: bottom left;
+    -moz-transform: skewY(1deg);
+    -webkit-transform: skewY(1deg);
+    -ms-transform: skewY(1deg);
+    -o-transform: skewY(1deg);
+    transform: skewY(1deg);
+    background: transparent;
+}
 
     .contact_title:first-child {
-        top: 500.5vh;
+        top: 451.5vh;
         position: absolute;
         color: rgba(0, 0, 0, 0);
         transform: rotateX(70deg);
